# LLM-RAG-Evaluation

./: .gitignore  README.md  main.py  pyproject.toml
chunk_visualizations/: omv_transcript_2024Q4_chunk500_overlap100.html  omv_transcript_2025Q1_chunk500_overlap100.html
data/: omv_transcript_2024Q4.txt  omv_transcript_2025Q1.txt
src/llm_evaluation/: chunk_visualization.py  eval_retrieval.py  evaluation_questions.json  langchain_rag_pipeline.py  query_engine.py  question.py  run_experiments.py
src/llm_evaluation/results/: all_experiment_results.csv  comprehensive_evaluation_results_k10_chunk1000.json  comprehensive_evaluation_results_k10_chunk1500.json  comprehensive_evaluation_results_k10_chunk500.json  comprehensive_evaluation_results_k5_chunk500.json  comprehensive_evaluation_results_k5_chunk500_recontext.json  vector_db_results_chunk1000_overlap200_topk10_with_retrieval.csv  vector_db_results_chunk1500_overlap300_topk10_with_retrieval.csv  vector_db_results_chunk500_overlap100_topk10_with_retrieval.csv  vector_db_results_chunk500_overlap100_topk5_recontext_title_with_retrieval.csv  vector_db_results_chunk500_overlap100_topk5_recontext_with_retrieval.csv  vector_db_results_chunk500_overlap100_topk5_with_retrieval.csv
src/llm_evaluation/utilities/: __init__.py  metrics_calculator.py
